--- a/v1/Q0YtpEgSysg.html
+++ b/v1/Q0YtpEgSysg.html
@@ -4,7 +4,7 @@
 <script>
   var player = jwplayer('player-container');
   player.setup({
-    file: 'https://cdn.jwplayer.com/manifests/wcPwoEKe.m3u8',
+    file: 'https://cdn.jwplayer.com/manifests/SZzQQDot.m3u8',
     mediaid: 'EqK9JUO2',
     width: "100%",
     height: "100%",
